<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/main_bg"
    tools:context="com.micste.busdriver.GameActivity">

    <TextView
        android:id="@+id/number_card_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/text_card_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:paddingRight="3dp"
        android:layout_toLeftOf="@id/number_card_count"
        android:text="@string/cards_left"/>

    <LinearLayout
        android:id="@+id/row1"
        android:layout_below="@id/text_card_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/card_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/card_back"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/img_content_desc"
            android:tag="@string/card_back"
            />

        <ImageView
            android:id="@+id/card_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/card_back"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/img_content_desc"
            android:tag="@string/card_back"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <ImageView
            android:id="@+id/card_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/card_back"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/img_content_desc"
            android:tag="@string/card_back"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@id/row1"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/card_4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/card_back"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/img_content_desc"
            android:tag="@string/card_back"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <ImageView
            android:id="@+id/card_5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/card_back"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/img_content_desc"
            android:tag="@string/card_back"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />


    </LinearLayout>
    
    <TextView
        android:id="@+id/text_gamehint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_color"
        android:textSize="21sp"
        android:layout_below="@id/row2"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />
    
    <Button
        android:id="@+id/gamebutton_1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_red"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorAccent"
        android:onClick="gameInput"
        />

    <Button
        android:id="@+id/gamebutton_2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_black"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/colorAccent"
        android:onClick="gameInput"
        />

</RelativeLayout>
